samples/_failures_safe/1761089130_218dc5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ce70679.c: In function ‘main’:
./samples/SAFE/__tmp_9ce70679.c:178:16: error: missing terminating " character
  178 |         printf("Invalid choice\n
      |                ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9ce70679.c:178:9: error: expected expression at end of input
  178 |         printf("Invalid choice\n
      |         ^~~~~~
./samples/SAFE/__tmp_9ce70679.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ce70679.c:178:9: error: expected declaration or statement at end of input
